--- a/src/services/Discount/Discount.Api/appsettings.json
+++ b/src/services/Discount/Discount.Api/appsettings.json
@@ -1,8 +1,7 @@
 {
-  "DatabaseSettings": {
-    "ConnectionString": "mongodb://catalogdb:27017",
-    "DatabaseName": "ProductDb",
-    "CollectionName": "Products"
+  "DatabaseSettings": 
+  {
+    "ConnectionString": "Server=localhost;Port=5432;Database=DiscountDb;User Id=admin;Password=admin1234;"
   },
   "Logging": {
     "LogLevel": {
