--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -8,7 +8,7 @@ services:
       - "27017:27017"
     volumes:
       - mongo_data:/data/db
-   
+
   basketdb:
     container_name: basketdb
     restart: always
@@ -37,7 +37,6 @@ services:
         - "5050:80"
     volumes:
       - pgadmin_data:/root/.pgadmin
-    
 
   portainer:
     container_name: portainer
@@ -54,7 +53,7 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - "DatabaseSettings:ConnectionString=mongodb://catalogdb:27017"
-    depends_on: 
+    depends_on:
       - catalogdb
     ports:
       - "8000:80"
@@ -63,17 +62,15 @@ services:
     container_name: basket.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - "Cahching:ConnectionString=basketdb:6379"
     depends_on:
       - basketdb
     ports:
       - "8001:80"
 
-
   discount.api:
     container_name: discount.api
     environment:
-      - ASPNETCORE_ENVIRONMENT=
+      - ASPNETCORE_ENVIRONMENT=Development
       - "DatabaseSettings:ConnectionString=Server=discountdb;Port=5432;Database=DiscountDb;User Id=admin;Password=admin1234;"
     depends_on:
       - discountdb
