--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -7,35 +7,32 @@ services:
   basketdb:
     image: redis:alpine
 
-
   discountdb:
     image: postgres
 
   pgadmin:
     image: dpage/pgadmin4
 
-
   portainer:
     image: portainer/portainer-ce
-
 
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalogapi
     build:
       context: .
-      dockerfile: services/Catalog/Catalog.API/Dockerfile
+      dockerfile: Services/Catalog/Catalog.API/Dockerfile
 
   basket.api:
     image: ${DOCKER_REGISTRY-}basketapi
     build:
       context: .
-      dockerfile: services/Basket/Basket.Api/Dockerfile
+      dockerfile: Services/Basket/Basket.API/Dockerfile
 
   discount.api:
     image: ${DOCKER_REGISTRY-}discountapi
     build:
       context: .
-      dockerfile: services/Discount/Discount.Api/Dockerfile
+      dockerfile: Services/Discount/Discount.API/Dockerfile
 
 volumes:
   mongo_data:
