Dsicount GRpc Done , start of ordering service

--- a/src/services/Basket/Basket.Api/appsettings.json
+++ b/src/services/Basket/Basket.Api/appsettings.json
@@ -1,5 +1,9 @@
 {
-  "Cahching": {
+  "Settings": {
+    //"DiscountGrpcServiceUri": "http://localhost:5003"
+    "DiscountGrpcServiceUri": "http://discount.grpc"
+  },
+  "CacheSettings": {
     "ConnectionString": "localhost:6379"
   },
   "Logging": {
