--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -27,21 +27,21 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
 
-  #orderdb:
-  #  container_name: orderdb
-  #  environment:
-  #      SA_PASSWORD: "SwN12345678"
-  #      ACCEPT_EULA: "Y"
-  #  restart: always
-  #  ports:
-  #      - "1433:1433"
+  orderdb:
+    container_name: orderdb
+    environment:
+        SA_PASSWORD: "SwN12345678"
+        ACCEPT_EULA: "Y"
+    restart: always
+    ports:
+        - "1433:1433"
 
-  #rabbitmq:
-  #  container_name: rabbitmq
-  #  restart: always
-  #  ports:
-  #      - "5672:5672"
-  #      - "15672:15672"
+  rabbitmq:
+    container_name: rabbitmq
+    restart: always
+    ports:
+        - "5672:5672"
+        - "15672:15672"
 
   pgadmin:
     container_name: pgadmin
@@ -80,10 +80,10 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - "CacheSettings:ConnectionString=basketdb:6379"
       - "GrpcSettings:DiscountUrl=http://discount.grpc"
-      #- "EventBusSettings:HostAddress=amqp://guest:guest@rabbitmq:5672"
+      - "EventBusSettings:HostAddress=amqp://guest:guest@rabbitmq:5672"
     depends_on:
       - basketdb
-      #- rabbitmq
+      - rabbitmq
     ports:
       - "8001:80"
 
@@ -107,54 +107,14 @@ services:
     ports:
       - "8003:80"
 
-  #ordering.api:
-  #  container_name: ordering.api
-  #  environment:
-  #    - ASPNETCORE_ENVIRONMENT=Development
-  #    - "ConnectionStrings:OrderingConnectionString=Server=orderdb;Database=OrderDb;User Id=sa;Password=SwN12345678"  
-  #    - "EventBusSettings:HostAddress=amqp://guest:guest@rabbitmq:5672"
-  #  depends_on:
-  #      - orderdb
-  #      - rabbitmq
-  #  ports:
-  #      - "8004:80"
+  ordering.api:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "ConnectionStrings:OrderingConnectionString=Server=orderdb;Database=OrderDb;User Id=sa;Password=SwN12345678"
+      - "EventBusSettings:HostAddress=amqp://guest:guest@rabbitmq:5672"
+    depends_on:
+      - orderdb
+      - rabbitmq
+    ports:
+      - "8004:80"
 
-  #ocelotapigw:
-  #  container_name: ocelotapigw
-  #  environment:
-  #    - ASPNETCORE_ENVIRONMENT=Development
-  #  depends_on:
-  #      - catalog.api
-  #      - basket.api
-  #      - discount.api
-  #      - ordering.api
-  #  ports:
-  #    - "8010:80"
-
-  #shopping.aggregator:
-  #  container_name: shopping.aggregator
-  #  environment:
-  #    - ASPNETCORE_ENVIRONMENT=Development
-  #    - "ApiSettings:CatalogUrl=http://catalog.api"
-  #    - "ApiSettings:BasketUrl=http://basket.api"
-  #    - "ApiSettings:OrderingUrl=http://ordering.api"
-  #  depends_on:
-  #    - catalog.api
-  #    - basket.api
-  #    - ordering.api
-  #  ports:
-  #    - "8005:80"
-
-  #aspnetrunbasics:
-  #  container_name: aspnetrunbasics
-  #  environment:
-  #    - ASPNETCORE_ENVIRONMENT=Development
-  #    - "ApiSettings:GatewayAddress=http://ocelotapigw"
-  #  depends_on:
-  #    - ocelotapigw
-  #    - catalog.api
-  #    - basket.api
-  #    - discount.api
-  #    - ordering.api
-  #  ports:
-  #    - "8006:80"
