--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -10,11 +10,11 @@ services:
   discountdb:
     image: postgres
 
-  #orderdb:
-  #  image: mcr.microsoft.com/mssql/server:2017-latest
+  orderdb:
+    image: mcr.microsoft.com/mssql/server:2017-latest
 
-  #rabbitmq:
-  #  image: rabbitmq:3-management-alpine
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
 
   pgadmin:
     image: dpage/pgadmin4
@@ -46,32 +46,15 @@ services:
       context: .
       dockerfile: Services/Discount/Discount.Grpc/Dockerfile
 
-  #ordering.api:
-  #  image: ${DOCKER_REGISTRY-}orderingapi
-  #  build:
-  #    context: .
-  #    dockerfile: Services/Ordering/Ordering.API/Dockerfile
-
-  #ocelotapigw:
-  #  image: ${DOCKER_REGISTRY-}ocelotapigw
-  #  build:
-  #    context: .
-  #    dockerfile: ApiGateways/OcelotApiGw/Dockerfile
-
-  #shopping.aggregator:
-  #  image: ${DOCKER_REGISTRY-}shoppingaggregator
-  #  build:
-  #    context: .
-  #    dockerfile: ApiGateways/Shopping.Aggregator/Dockerfile
-
-  #aspnetrunbasics:
-  #  image: ${DOCKER_REGISTRY-}aspnetrunbasics
-  #  build:
-  #    context: .
-  #    dockerfile: WebApps/AspnetRunBasics/Dockerfile
+  ordering.api:
+    image: ${DOCKER_REGISTRY-}orderingapi
+    build:
+      context: .
+      dockerfile: services/Ordering/Ordering.Api/Dockerfile
 
 volumes:
   mongo_data:
   portainer_data:
   postgres_data:
   pgadmin_data:
+
